add notebook cosmo and era5

--- a/notebooks/02_tutorial_smn_station.ipynb
+++ b/notebooks/02_tutorial_smn_station.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "48bc49ab-3418-47e0-bc0e-0ea030593c3e",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3cb59035-9287-49e6-9385-8ff941fd3f63",
    "metadata": {},
    "outputs": [
@@ -189,6 +189,13 @@
      "output_type": "stream",
      "text": [
       "WARNING: CPLE_AppDefined in +init=epsg:XXXX syntax is deprecated. It might return a CRS with a non-EPSG compliant axis order.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+init=epsg:21781\n"
      ]
     }
    ],
@@ -199,6 +206,7 @@
     "ny, nx = len(da['y']), len(da['x'])\n",
     "x, y = np.meshgrid(da['x'], da['y'])\n",
     "# Rasterio works with 1D arrays\n",
+    "print(da.crs)\n",
     "lon, lat = transform(da.crs, {'init': 'EPSG:4326'},\n",
     "                     x.flatten(), y.flatten())\n",
     "lon = np.asarray(lon).reshape((ny, nx))-0.01\n",
