--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Wind Downscaling\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "Get a Copernicus API key from: https://cds.climate.copernicus.eu/api-how-to"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6005d1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +23,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d76d3d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U https://github.com/OpheliaMiralles/WindDownscaling_EPFL_UNIBE.git"
+    "!pip install -U git+https://github.com/OpheliaMiralles/WindDownscaling_EPFL_UNIBE.git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7648055b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46f6a5a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77e38ebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82286a9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,21 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2808eca3",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import date\n",
     "from pathlib import Path\n",
@@ -87,8 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "eff13930",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,18 +88,23 @@
     "ERA5_DATA_FOLDER = DATA_ROOT / 'ERA5'\n",
     "COSMO1_DATA_FOLDER = DATA_ROOT / 'COSMO1'\n",
     "DEM_DATA_FILE = DATA_ROOT / 'dem/Switzerland-90m-DEM.tif'\n",
-    "PROCESSED_DATA_FOLDER = DATA_ROOT / 'img_prediction_files'"
+    "PROCESSED_DATA_FOLDER = DATA_ROOT / 'img_prediction_files'\n",
+    "\n",
+    "DATA_ROOT.mkdir(parents=True, exist_ok=True)\n",
+    "ERA5_DATA_FOLDER.mkdir(exist_ok=True)\n",
+    "COSMO1_DATA_FOLDER.mkdir(exist_ok=True)\n",
+    "DEM_DATA_FILE.parent.mkdir(exist_ok=True)\n",
+    "PROCESSED_DATA_FOLDER.mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6d299e1c",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "START_DATE = date(2017, 9, 1)\n",
-    "END_DATE = date(2017, 9, 5)\n",
+    "END_DATE = date(2017, 9, 3)\n",
     "SEQUENCE_LENGTH = 6\n",
     "IMG_SIZE = 30\n",
     "BATCH_SIZE = 16"
@@ -116,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb954b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,12 +124,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f824cec",
    "metadata": {},
    "outputs": [],
    "source": [
     "if not DEM_DATA_FILE.exists():\n",
-    "    DEM_DATA_FILE.parent.mkdir(exist_ok=True)\n",
     "    dest = str(DEM_DATA_FILE)\n",
     "    !eio --product SRTM3 clip -o {dest} --bounds 5.27 45.46 11.02 48.15"
    ]
@@ -141,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7459b34b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75460397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc306b6d",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -181,21 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1fce09a0",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((16, 6, 30, 30, 10), (16, 6, 30, 30, 2))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gan.data_generator import BatchGenerator, NaiveDecoder\n",
     "batches = BatchGenerator(PROCESSED_DATA_FOLDER, NaiveDecoder(), SEQUENCE_LENGTH, IMG_SIZE, BATCH_SIZE)\n",
@@ -205,24 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "9072d0bb",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generator: 11,291,402 weights\n",
-      "Discriminator: 15,086,401 weights\n",
-      "Total: 26,377,803 weights\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gan.train import build_gan\n",
     "gan = build_gan(n_inputs=len(batches.input_variables), n_timesteps=SEQUENCE_LENGTH, gen_disc_ratio=8,\n",
@@ -232,7 +200,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2104db00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e368ec4a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14e21e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,7 +223,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae88d2fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -266,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83a576c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -274,7 +237,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9957f0ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7724613",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -290,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a9f961",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82cd1faf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -306,7 +265,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c889b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -314,7 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bae48b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -322,7 +279,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47299a87",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -330,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caf12190",
    "metadata": {},
    "outputs": [],
    "source": []
