updates on models

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -369,7 +369,7 @@
     "def pct_data_available(x: pd.Series):\n",
     "    return 100*x.count()/len(x)\n",
     "\n",
-    "def plot_stations(ax, stations_df):\n",
+    "def plot_stations(ax, stations):\n",
     "    proj = HigherResPlateCarree()\n",
     "    ax = plt.axes(projection=proj)\n",
     "    ax.set_extent([stations.lon.min()-0.3, stations.lon.max()+0.3, stations.lat.min()-0.3, stations.lat.max()+0.3])\n",
