changed package name

--- a/src/downscaling/wind_downscaling.ipynb
+++ b/src/downscaling/wind_downscaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f4f2e4d9",
+   "id": "747ecade",
    "metadata": {},
    "source": [
     "# Wind Downscaling"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c0ff8e",
+   "id": "fdf26a0b",
    "metadata": {},
    "source": [
     "## Prerequisites"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df0a1ce9",
+   "id": "25a7e359",
    "metadata": {},
    "source": [
     "* Conda environment\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13bfa92e",
+   "id": "0ab82919",
    "metadata": {},
    "source": [
     "## Install the required packages"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b04a6f6b",
+   "id": "573249e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4fc0ff85",
+   "id": "5b42d2b5",
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,13 @@
     "    !pip install -e .\n",
     "else:\n",
     "    !pip uninstall downscaling -y\n",
-    "    !pip install -U git+https://github.com/OpheliaMiralles/WindDownscaling_EPFL_UNIBE.git"
+    "    !pip install -U git+https://github.com/OpheliaMiralles/wind-downscaling-gan.git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c69dcb66",
+   "id": "cc22f62d",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5b334d9f",
+   "id": "4092c846",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "610cfcc0",
+   "id": "7f0a6117",
    "metadata": {},
    "source": [
     "## Set configuration"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8158bb9e",
+   "id": "ee120d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25327ca5",
+   "id": "5031a684",
    "metadata": {},
    "source": [
     "## Data Loading"
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8d7cc276",
+   "id": "6f48756e",
    "metadata": {
     "scrolled": false
    },
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "289b7672",
+   "id": "0ec234b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74140953",
+   "id": "52081441",
    "metadata": {},
    "source": [
     "## Downscaling"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a60b9c70",
+   "id": "edda9cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4826bc09",
+   "id": "b0c7cfb8",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a5227854",
+   "id": "bd8e625d",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026d59a5",
+   "id": "05b99f64",
    "metadata": {},
    "source": [
     "## Downscaling wind fields in Switzerland with target COSMO-1"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5d9dda6f",
+   "id": "91e0beee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "304c1e15",
+   "id": "7cb6bb01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,17 +323,17 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "135bb404",
+   "id": "c5cb6ff4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "HIGH_RES_TEMPLATE = xr.open_dataset('switzerland_highres_map.nc')"
+    "HIGH_RES_TEMPLATE = xr.open_dataset('switzerland_cosmo_map.nc')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1634d795",
+   "id": "d6069f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1e2ee52a",
+   "id": "0cceaa3d",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c726f2d1",
+   "id": "bf7c16d8",
    "metadata": {},
    "source": [
     "## Plots of wind fields in Switzerland"
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ad24a18d",
+   "id": "b9278b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "23a6760e",
+   "id": "a199ee60",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d12203e3",
+   "id": "ceaef12e",
    "metadata": {},
    "outputs": [
     {
