Move all the code to downscaling package

--- a/src/downscaling/wind_downscaling.ipynb
+++ b/src/downscaling/wind_downscaling.ipynb
@@ -63,8 +63,8 @@
       "  Cloning https://github.com/OpheliaMiralles/WindDownscaling_EPFL_UNIBE.git to /private/var/folders/nb/drg15dgx4mj6bqb_f4c9bnvc0000gp/T/pip-req-build-bfon34j6\n",
       "  Running command git clone -q https://github.com/OpheliaMiralles/WindDownscaling_EPFL_UNIBE.git /private/var/folders/nb/drg15dgx4mj6bqb_f4c9bnvc0000gp/T/pip-req-build-bfon34j6\n",
       "Building wheels for collected packages: downscaling\n",
-      "  Building wheel for downscaling (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for downscaling: filename=downscaling-1.0-py3-none-any.whl size=15520 sha256=693bfe144c9a5cd98f4fb65394c9ff6080e3e488d78f1e239a1c9b4922f6fc69\n",
+      "  Building wheel for downscaling (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for downscaling: filename=downscaling-1.0-py3-none-any.whl size=15520 sha256=693bfe144c9a5cd98f4fb65394c9ff6080e3e488d78f1e239a1c9b4922f6fc69\n",
       "  Stored in directory: /private/var/folders/nb/drg15dgx4mj6bqb_f4c9bnvc0000gp/T/pip-ephem-wheel-cache-98hwjq22/wheels/9a/76/c2/86e8f27804b4255a52a51542e4b444c005536c898171d1681e\n",
       "Successfully built downscaling\n",
       "Installing collected packages: downscaling\n",
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "from data.download_ERA5 import download_ERA5\n",
+    "from downscaling.data.download_ERA5 import download_ERA5\n",
     "download_ERA5(ERA5_DATA_FOLDER, START_DATE, END_DATE, LATITUDE_R, LONGITUDE_R)\n",
     "print('Done')"
    ]
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from downscaling_utils import downscale, plot_wind_fields\n",
+    "from downscaling.downscaling_utils import downscale, plot_wind_fields\n",
     "import xarray as xr"
    ]
   },
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from downscaling_utils import process_era5, process_topo, predict"
+    "from downscaling.downscaling_utils import process_era5, process_topo, predict"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from downscaling_utils import plot_elevation, plot_wind_fields\n",
+    "from downscaling.downscaling_utils import plot_elevation, plot_wind_fields\n",
     "from cartopy.crs import epsg\n",
     "HIGH_RES_CRS = epsg(21781)  # crs for the target map, for plots"
    ]
