simplify source tree and added overlap factor

--- a/src/downscaling/wind_downscaling.ipynb
+++ b/src/downscaling/wind_downscaling.ipynb
@@ -73,11 +73,8 @@
     }
    ],
    "source": [
-    "if Path('./setup.py').exists():\n",
-    "    !pip install -e .\n",
-    "else:\n",
-    "    !pip uninstall downscaling -y\n",
-    "    !pip install -U git+https://github.com/OpheliaMiralles/wind-downscaling-gan.git"
+    "!pip uninstall downscaling -y\n",
+    "!pip install -U git+https://github.com/OpheliaMiralles/wind-downscaling-gan.git"
    ]
   },
   {
@@ -197,7 +194,7 @@
     }
    ],
    "source": [
-    "from downscaling.data.download_ERA5 import download_ERA5\n",
+    "from downscaling.data import download_ERA5\n",
     "download_ERA5(ERA5_DATA_FOLDER, START_DATE, END_DATE, LATITUDE_R, LONGITUDE_R)\n",
     "print('Done')"
    ]
@@ -229,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from downscaling.downscaling_utils import downscale, plot_wind_fields\n",
+    "from downscaling import downscale, plot_wind_fields\n",
     "import xarray as xr"
    ]
   },
@@ -302,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from downscaling.downscaling_utils import process_era5, process_topo, predict"
+    "from downscaling import process_era5, process_topo, predict"
    ]
   },
   {
@@ -376,7 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from downscaling.downscaling_utils import plot_elevation, plot_wind_fields\n",
+    "from downscaling import plot_elevation, plot_wind_fields\n",
     "from cartopy.crs import epsg\n",
     "HIGH_RES_CRS = epsg(21781)  # crs for the target map, for plots"
    ]
